tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_errors_if_impl_trait_constraint_is_not_satisfied/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The trait bound `SomeGreeter: Greeter` is not satisfied
   ┌─ src/main.nr:8:16
   │
 8 │             T: Greeter,
   │                ------- required by this bound in `Foo`
   ·
22 │         impl Foo<SomeGreeter> for Bar {}
   │                                   --- The trait `Greeter` is not implemented for `SomeGreeter`
   │

Aborting due to 1 previous error
